gccida/c2/make_tree
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4515:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4518:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4525:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4526:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4530:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4531:5: error: expected ';' after expression
tree v27; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4531:6: error: use of undeclared identifier 'v27'
tree v27; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4532:5: error: expected ';' after expression
tree v28; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4532:6: error: use of undeclared identifier 'v28'
tree v28; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4553:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
d.r[2] = ( __int64)x[2]; 
                   ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4559:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( signed __int64)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/expmed.c:4575:33: error: expected expression
tree = make_tree( type, *( rtx *)&v19[2 * v20]); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_tree/src/obj/expmed.o] Error 1
